[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/PlayerHead.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Body.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/birthrand1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/eaten.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.56223

[sub_resource type="CircleShape2D" id=2]
radius = 32.4645

[sub_resource type="CircleShape2D" id=3]
radius = 13.8943

[sub_resource type="OccluderPolygon2D" id=4]
cull_mode = 2
polygon = PoolVector2Array( 0.0429993, -5.25198, -3.45255, -3.97311, -4.98718, -1.15964, -4.30511, 2.67694, -1.40637, 4.89365, 2.2597, 4.38211, 4.56165, 1.90964, 4.81741, -1.33014, 2.85651, -4.05838 )

[sub_resource type="RayShape2D" id=5]
length = 149.299

[sub_resource type="Theme" id=6]

[node name="Player" type="KinematicBody2D" groups=["players"]]
script = ExtResource( 2 )
BodyScene = ExtResource( 3 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnPrevention" type="Area2D" parent="." groups=["spawnprev"]]
collision_layer = 32
collision_mask = 1056

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpawnPrevention"]
polygon = PoolVector2Array( -1.05246, -0.295898, 8.32386, -31.6247, 92.6237, -30.7838, 89.0499, 28.0789 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPrevention"]
shape = SubResource( 2 )

[node name="AIDetection" type="Area2D" parent="." groups=["spawnprev"]]
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AIDetection"]
polygon = PoolVector2Array( -1.05246, -0.295898, 78.2437, -10.401, 79.0575, 33.7508 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIDetection"]
shape = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="Polygons" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite" parent="."]
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 1 )

[node name="DieSpot" type="Area2D" parent="."]
collision_mask = 2

[node name="DieCollision" type="CollisionPolygon2D" parent="DieSpot"]
polygon = PoolVector2Array( 3.52024, -1.50656, 3.4607, 1.8276, 6.70412, 2.38836, 6.63102, -2.50921 )

[node name="BodyLock" type="Position2D" parent="."]
position = Vector2( -5, 0 )

[node name="GoodieDetection" type="Area2D" parent="."]
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodieDetection"]
rotation = 4.71239
shape = SubResource( 5 )

[node name="EatenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="BirthRand1Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="BodySpawn" type="Position2D" parent="."]
position = Vector2( -15, 0 )

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.572549 )
margin_left = -17.0
margin_top = -36.0
margin_right = 16.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 26.0
margin_bottom = 21.0
theme = SubResource( 6 )
text = "HI!"

[connection signal="area_entered" from="AIDetection" to="." method="_on_AIDetection_area_entered"]
[connection signal="area_exited" from="AIDetection" to="." method="_on_AIDetection_area_exited"]
[connection signal="body_entered" from="DieSpot" to="." method="_on_DieSpot_body_entered"]
[connection signal="area_entered" from="GoodieDetection" to="." method="_on_GoodieDetection_area_entered"]
